# django_tutorial

./: pyproject.toml
first_project/first_project/: settings.py
